<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrationpage">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:alpha="0.8"
        android:src="@drawable/background_image"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_gravity="left|center_horizontal|center_vertical"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="15sp"
        android:gravity="left"
        android:text="@string/reg1"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_gravity="left|center_horizontal|center_vertical"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:gravity="left"
        android:text="@string/login2"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:hint="@string/login2"
        android:maxLines="1"
        android:inputType="number"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text3"
        android:layout_gravity="left|center_horizontal|center_vertical"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="25sp"
        android:gravity="left"
        android:text="@string/login3"
        android:textSize="14sp" />
    <EditText
        android:id="@+id/text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text4"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:hint="@string/login3"
        android:maxLines="1"
        android:inputType="numberPassword"
        android:textSize="14sp" />
    <Button
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text5"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="25sp"
        android:text="@string/reg2"
        android:textSize="18sp"
        android:backgroundTint="@color/green"
        />
    <TextView
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_reg"
        android:layout_gravity="left|center_horizontal|center_vertical"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="15sp"
        android:text="@string/reg3"
        android:textColor="@color/green"
        android:textSize="18sp" />
</RelativeLayout >