<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:background="@drawable/shapebar">

        <RelativeLayout
            android:layout_width="112dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="5sp">

            <TextView
                android:id="@+id/header_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="কৃষক"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/header_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="4dp"
                android:text="বন্ধু"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/img1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/head"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:src="@drawable/farmer_profile" />

    <TextView
        android:id="@+id/l1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:text="@string/p2"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/l1_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="15sp"
        android:text="@string/p3"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l1"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18sp"
        android:layout_marginRight="30sp"
        android:text="@string/p5"
        android:textColor="@color/green"
        android:textSize="14sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/update_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30sp"
        android:layout_marginTop="18sp"
        android:text="@string/p6"
        android:textSize="14sp"
        android:visibility="gone"
        android:textColor="@color/green"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/l2_next_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l1_next"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="20sp"
        android:gravity="left"
        android:text="@string/p2"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/l2_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l2_next_1"
        android:enabled="false"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="15sp"
        android:hint="@string/p2"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/l2_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l2_1"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="20sp"
        android:text="@string/login2"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l2_next"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="20sp"
        android:hint="@string/login2"
        android:inputType="number"
        android:maxLines="1"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/l3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l2"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="20sp"
        android:text="@string/login3"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/l4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l3"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="15sp"
        android:enabled="false"
        android:hint="@string/login3"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l4"
        android:layout_gravity="left|center_horizontal|center_vertical"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="20sp"
        android:text="@string/p1"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logout"
        android:layout_marginTop="140sp"
        android:layout_centerHorizontal="true"
        android:text="কৃষক বন্ধু Version 1.0.1"
        android:textColor="@color/black"
        android:textSize="10sp"
        />
</RelativeLayout>