<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment_page">

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:background="@drawable/shapebar">
        <RelativeLayout
            android:layout_width="112dp"
            android:layout_height="40dp"
            android:layout_marginTop="5sp"
            android:layout_centerInParent="true">
            <TextView
                android:id="@+id/header_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="কৃষক"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/header_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="4dp"
                android:text="বন্ধু"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head">
        <TextView
            android:id="@+id/first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="15sp"
            android:text="@string/payment3"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_name_payment"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"
            android:text="Product Name"></TextView>
        <TextView
            android:id="@+id/product_time_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Product Time"
            android:layout_below="@+id/first"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20sp"
            android:layout_marginRight="20sp"
            >
        </TextView>
        <TextView
            android:id="@+id/product_value_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Product Money"
            android:layout_below="@+id/product_time_payment"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10sp"
            android:layout_marginRight="20sp"
            >
        </TextView>
        <TextView
            android:id="@+id/product_quantity_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment1"
            android:layout_below="@+id/product_value_payment"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="20sp"
            >
        </TextView>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="18sp"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_below="@+id/product_quantity_payment"
            />
        <TextView
            android:id="@+id/p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment2"
            android:layout_below="@+id/spinner"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="20sp"
            >
        </TextView>
        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="fill_parent"
            android:layout_height="28sp"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_below="@+id/p2"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_buy"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape1"
            android:textColor="@android:color/white"
            android:text="@string/payment4"
            android:layout_below="@+id/spinner2" />
    </RelativeLayout>

</RelativeLayout>